--- a/assets/scss/template-parts/footer.scss
+++ b/assets/scss/template-parts/footer.scss
@@ -1,9 +1,19 @@
 /* -- footer -- */
 
+/** Sticky footer styles **/
+main {
+	display: flex;
+	flex-direction: column;
+	min-height: 70vh;
+
+	.entry-content {
+		flex: 1 0 auto;
+	}
+}
+
 .site-footer {
-	background-color: var(--wp--preset--color--black);
-	border-top: 1px solid var(--wp--preset--color--grey-400);
-	padding-bottom: 0;
-	padding-top: 0;
-	margin-top: 0;
+	background-color: var(--wp--preset--color--contrast);
+	color: var(--wp--preset--color--base);
+	flex-shrink: 0;
+	margin-top: var(--wp--preset--spacing--70);
 }
