--- a/assets/scss/template-parts/header.scss
+++ b/assets/scss/template-parts/header.scss
@@ -5,8 +5,8 @@
 /* -- Header Search -- */
 .is-root-container,
 .site-header {
-	background-color: var(--wp--custom--header--background);
-	color: var(--wp--custom--header--text);
+	background-color: var(--wp--custom--header-background--background);
+	color: var(--wp--custom--header-text--color);
 	min-height: 5.75rem;
 	transition:
 		min-height 0.2s ease,
@@ -14,8 +14,6 @@
 		padding 0.2s ease;
 
 	.header-container {
-		padding: var(--wp--preset--spacing--20) var(--wp--preset--spacing--30);
-
 		.wp-block-site-logo {
 			max-width: 12.5rem;
 
@@ -36,6 +34,21 @@
 
 				mask {
 					display: none;
+				}
+			}
+		}
+
+		.wp-block-site-title {
+			a {
+				&::before,
+				&::after {
+					content: none;
+				}
+
+				&:hover,
+				&:focus {
+					color: var(--wp--preset--color--accent-1);
+					outline: none;
 				}
 			}
 		}
@@ -62,9 +75,7 @@
 	}
 
 	.wp-block-search {
-
 		&.wp-block-search__button-inside {
-
 			.wp-block-search__inside-wrapper {
 				padding: 0;
 
@@ -81,9 +92,7 @@
 		}
 
 		&.wp-block-search__button-only {
-
 			.wp-block-search__inside-wrapper {
-
 				.wp-block-search__button {
 					background-color: transparent;
 
@@ -99,9 +108,7 @@
 }
 
 @include responsive-mixins.responsive-max(833px) {
-
 	.site-header {
-
 		.wp-block-search {
 			width: 100%;
 		}
