--- a/assets/scss/base/global.scss
+++ b/assets/scss/base/global.scss
@@ -5,9 +5,11 @@
 	box-sizing: border-box;
 }
 
-html {
-	scroll-behavior: smooth;
+html,
+body {
+	padding: 0;
 	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 a,
@@ -19,18 +21,82 @@ textarea,
 }
 
 sup {
-	color: var(--wp--preset--color--primary-500);
+	color: var(--wp--preset--color--contrast);
 	font-size: 0.75rem;
 
 	a {
-		color: var(--wp--preset--color--primary-500);
+		color: var(--wp--preset--color--contrast);
 		text-decoration: none;
+	}
+}
+
+/** Link styles **/
+.entry-content,
+.site-footer {
+	a {
+		&:not(.wp-block-social-link-anchor):not(.back-to-top):not(
+				.wp-block-button__link
+			):not(.wp-block-file__button):not(.wp-block-file__button-text):not(
+				.wp-block-file__button-text-inner
+			) {
+			color: var(--wp--preset--color--accent-1);
+			cursor: pointer;
+			padding: 0;
+			position: relative;
+			text-decoration: none;
+			text-overflow: ellipsis;
+			text-wrap: nowrap;
+			transition: all 0.2s ease-in-out;
+
+			&::before {
+				content: '';
+				left: 50%;
+				transition: all 0.3s ease;
+				width: 0%;
+			}
+
+			&::after {
+				content: '';
+				left: 50%;
+				transition: all 0.3s ease;
+				width: 0;
+			}
+
+			&:hover,
+			&:focus {
+				-webkit-text-stroke: 0.5px var(--wp--preset--color--accent-1);
+				outline: none;
+
+				&::before {
+					background: var(--wp--preset--color--accent-1);
+					bottom: 0;
+					content: '';
+					height: 2px;
+					left: 0;
+					position: absolute;
+					width: 50%;
+				}
+
+				&::after {
+					background: var(--wp--preset--color--accent-1);
+					bottom: 0;
+					content: '';
+					height: 2px;
+					left: 50%;
+					position: absolute;
+					width: 50%;
+				}
+			}
+
+			&:focus {
+				outline: auto;
+			}
+		}
 	}
 }
 
 /** Fix for image lightbox with caption trigger overflow from core **/
 .wp-block-gallery {
-
 	.lightbox-trigger {
 		top: 1rem !important; /* stylelint-disable-line declaration-no-important */
 	}
