--- a/assets/scss/blocks/core/cover.scss
+++ b/assets/scss/blocks/core/cover.scss
@@ -1,83 +1,12 @@
 /* -- Cover -- */
 
 .wp-block-cover {
-
-	&.is-style-gradient {
-
-		.has-background-dim:not([class*='-background-color']) {
-			background-color: transparent;
-			background-image: linear-gradient(
-				to top,
-				rgba(0, 0, 0, 0.6),
-				rgba(0, 0, 0, 1)
-			);
-			opacity: 1;
-		}
-	}
-
 	.wp-block-buttons {
 		margin-top: var(--wp--preset--spacing--30);
 
 		.wp-block-button {
-
 			.wp-block-button__link {
-				border-radius: 6px;
-			}
-		}
-	}
-}
-
-:root {
-
-	.wp-block-cover:not(.is-light),
-	.wp-block-cover-image:not(.is-light) {
-
-		.wp-block-buttons {
-
-			.wp-block-button {
-
-				&.is-style-outline {
-
-					.wp-block-button__link:not(.has-text-color):not(
-							.has-link-color
-						) {
-						border-color: var(--wp--preset--color--white);
-						color: var(--wp--preset--color--white);
-
-						&:hover {
-							color: var(--wp--preset--color--black);
-						}
-					}
-				}
-
-				&.is-style-minimal {
-
-					.wp-block-button__link:not(.has-text-color):not(
-							.has-link-color
-						) {
-						color: var(--wp--preset--color--white);
-
-						&:hover {
-							box-shadow: inset 0 0 100px 100px
-								rgba(255, 255, 255, 0.1);
-							color: var(--wp--preset--color--black);
-						}
-					}
-				}
-
-				&.is-style-text {
-
-					.wp-block-button__link:not(.has-text-color):not(
-							.has-link-color
-						) {
-						color: var(--wp--preset--color--white);
-
-						&:hover {
-							box-shadow: inset 0 0 100px 100px
-								rgba(255, 255, 255, 0.1);
-						}
-					}
-				}
+				border-radius: var(--wp--preset--border-radius--md);
 			}
 		}
 	}
