--- a/assets/scss/blocks/core/latest-posts.scss
+++ b/assets/scss/blocks/core/latest-posts.scss
@@ -7,18 +7,20 @@
 	padding-bottom: var(--wp--preset--spacing--30);
 
 	li {
-		border-radius: 10px;
-		box-shadow:
-			0 0.5rem 1rem 0 rgba(48, 49, 51, 0.1),
-			0 0 0.0625rem 0 rgba(48, 49, 51, 0.05);
+		border-radius: var(--wp--preset--border-radius--md);
+		border: 1px solid var(--wp--preset--color--contrast, rgba(0, 0, 0, 0.1));
+		box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
+		background: var(--wp--preset--color--base, #fff);
+		padding: var(--wp--preset--spacing--30);
 		display: inline-flex;
 		flex-direction: column;
-		margin-bottom: var(--wp--preset--spacing--30);
+		gap: var(--wp--preset--spacing--50);
 		position: relative;
+		margin-bottom: var(--wp--preset--spacing--30);
 		width: 100%;
 
 		> *:not(.wp-block-latest-posts__featured-image) {
-			padding: 0.5rem 1.875rem;
+			padding: var(--wp--preset--spacing--30);
 		}
 
 		&:last-of-type {
@@ -26,16 +28,15 @@
 		}
 
 		&:has(.wp-block-latest-posts__featured-image) {
-			padding-left: 18.75rem;
+			padding-left: var(--wp--preset--spacing--50);
 		}
 
 		.wp-block-latest-posts__featured-image {
-			aspect-ratio: 16/9;
+			aspect-ratio: var(--wp--preset--aspect-ratio--16-9);
 			left: 0;
 			margin-bottom: 0;
 			height: 100%;
 			overflow: hidden;
-			position: absolute;
 			max-width: 18.75rem;
 
 			a {
@@ -57,32 +58,37 @@
 		.wp-block-latest-posts__post-title {
 			color: var(--wp--preset--color--black);
 			font-family: var(--wp--preset--font-family--headline);
-			font-size: var(--wp--preset--font-size--s);
 			margin-bottom: var(--wp--preset--spacing--20);
 			margin-top: var(--wp--preset--spacing--20);
+			text-decoration: none;
+
+			&:hover,
+			&:focus {
+				color: var(--wp--preset--color--accent-1);
+			}
 		}
 
 		.wp-block-latest-posts__post-author,
 		.wp-block-latest-posts__post-date {
 			color: var(--wp--preset--color--black);
 			font-family: var(--wp--preset--font-family--body);
-			font-size: var(--wp--preset--font-size--xs);
+			font-size: var(--wp--preset--font-size--small);
 			margin-bottom: var(--wp--preset--spacing--20);
 			margin-top: var(--wp--preset--spacing--20);
 		}
 
 		.wp-block-latest-posts__post-excerpt {
-			color: var(--wp--preset--color--primary-500);
+			color: var(--wp--preset--color--contrast);
 			font-family: var(--wp--preset--font-family--body);
-			font-size: var(--wp--preset--font-size--xs);
+			font-size: var(--wp--preset--font-size--medium);
 			margin-bottom: var(--wp--preset--spacing--20);
 			margin-top: var(--wp--preset--spacing--20);
 
 			.wp-block-latest-posts__read-more {
-				color: var(--wp--preset--color--primary-500);
+				color: var(--wp--preset--color--contrast);
 				display: block;
-				font-family: var(--wp--preset--font-family--inter);
-				font-size: var(--wp--preset--font-size--xxs);
+				font-family: var(--wp--preset--font-family--headline);
+				font-size: var(--wp--preset--font-size--small);
 				font-weight: 300;
 				padding-top: 1rem;
 				text-decoration: underline;
@@ -90,7 +96,7 @@
 
 				&:hover,
 				&:focus {
-					color: var(--wp--preset--color--primary-300);
+					color: var(--wp--preset--color--accent-1-300);
 				}
 			}
 		}
