--- a/assets/scss/blocks/core/preformatted.scss
+++ b/assets/scss/blocks/core/preformatted.scss
@@ -1,6 +1,7 @@
 /* -- preformatted -- */
 
 .wp-block-preformatted {
+	font-family: var(--wp--preset--font-family--code);
 	letter-spacing: -0.023rem;
 	overflow-wrap: normal;
 	overflow-x: scroll;
