--- a/assets/scss/blocks/core/social-links.scss
+++ b/assets/scss/blocks/core/social-links.scss
@@ -4,21 +4,18 @@
 	gap: 0.75rem;
 
 	&.is-style-logos-only {
-
 		.wp-social-link {
-
 			.wp-block-social-link-anchor {
-				color: var(--wp--preset--color--primary-500);
-				fill: var(--wp--preset--color--primary-500);
+				color: var(--wp--preset--color--contrast);
+				fill: var(--wp--preset--color--contrast);
 				padding: 0;
 			}
 		}
 	}
 
 	&.has-visible-labels {
-
 		.wp-social-link {
-			background-color: var(--wp--preset--color--primary-500);
+			background-color: var(--wp--preset--color--contrast);
 
 			.wp-block-social-link-anchor {
 				color: var(--wp--preset--color--white);
@@ -29,14 +26,13 @@
 	}
 
 	&.is-style-icon {
-
 		.wp-social-link {
-			background-color: var(--wp--preset--color--primary-500);
+			background-color: var(--wp--preset--color--contrast);
 
 			.wp-block-social-link-anchor {
 				color: var(--wp--preset--color--white);
 				fill: var(--wp--preset--color--white);
-				padding: 0.5rem;
+				padding: var(--wp--preset--spacing--30);
 			}
 		}
 	}
