--- a/assets/scss/blocks/core/navigation.scss
+++ b/assets/scss/blocks/core/navigation.scss
@@ -11,98 +11,26 @@
 		.wp-block-navigation-item__content {
 			color: var(--wp--custom--navigation-link--color);
 			cursor: pointer;
-			padding: 0;
-			position: relative;
-			text-decoration: none;
 			text-overflow: ellipsis;
 			text-wrap: nowrap;
 			transition: all 0.2s ease-in-out;
+			flex-grow: unset;
+			gap: 0;
 
-			&::before {
-				content: '';
-				left: 50%;
-				transition: all 0.3s ease;
-				width: 0%;
-			}
-
-			&::after {
-				content: '';
-				left: 50%;
-				transition: all 0.3s ease;
-				width: 0;
+			&:focus {
+				outline: auto;
 			}
 
 			&:hover,
-			&:focus {
-				-webkit-text-stroke: 0.5px var(--wp--preset--color--accent-1);
-				outline: none;
-
-				&::before {
-					background: var(--wp--preset--color--accent-1);
-					bottom: 0;
-					content: '';
-					height: 2px;
-					left: 0;
-					position: absolute;
-					width: 50%;
-				}
-
-				&::after {
-					background: var(--wp--preset--color--accent-1);
-					bottom: 0;
-					content: '';
-					height: 2px;
-					left: 50%;
-					position: absolute;
-					width: 50%;
+			&:active {
+				.wp-block-navigation-item__label {
+					color: var(--wp--custom--navigation-link-hover--color);
 				}
 			}
 
 			&[aria-current='page'] {
 				-webkit-text-stroke: unset;
 				color: var(--wp--custom--navigation-link-hover--color);
-
-				&::before {
-					background: var(
-						--wp--custom--navigation-background--background
-					);
-					bottom: 0;
-					content: '';
-					height: 2px;
-					left: 0;
-					position: absolute;
-					width: 50%;
-				}
-
-				&::after {
-					background: var(
-						--wp--custom--navigation-background--background
-					);
-					bottom: 0;
-					content: '';
-					height: 2px;
-					left: 50%;
-					position: absolute;
-					width: 50%;
-				}
-
-				&:hover {
-					-webkit-text-stroke: unset;
-
-					&::before {
-						content: '';
-						left: 50%;
-						transition: all 0.3s ease;
-						width: 0%;
-					}
-
-					&::after {
-						content: '';
-						left: 50%;
-						transition: all 0.3s ease;
-						width: 0;
-					}
-				}
 			}
 		}
 
@@ -123,45 +51,25 @@
 					width: 100%;
 
 					> .wp-block-navigation-item__content {
-						display: block;
 						flex-grow: unset;
 						gap: 0;
 						padding: 0.3125rem 2rem 0.3125rem 0.625rem;
 						width: 100%;
+						display: inline-block;
+						position: relative;
+						overflow: hidden;
+						text-decoration: none;
+						transition: background-color 0.2s ease-in-out;
 
-						&::before,
-						&::after {
-							content: '';
-							left: 50%;
-							transition: all 0.3s ease;
-							width: 0;
+						&:focus {
+							outline: auto;
 						}
 
 						&:hover,
 						&:active {
-							&::before {
-								background: var(
-									--wp--custom--navigation-sublink-background--background
-								);
-								bottom: 0;
-								content: '';
-								height: 100%;
-								left: 0;
-								position: absolute;
-								width: 50%;
-							}
-
-							&::after {
-								background: var(
-									--wp--custom--navigation-sublink-background--background
-								);
-								bottom: 0;
-								content: '';
-								height: 100%;
-								left: 50%;
-								position: absolute;
-								width: 50%;
-							}
+							background: var(
+								--wp--custom--navigation-sublink-background--background
+							);
 
 							.wp-block-navigation-item__label {
 								color: var(
@@ -169,6 +77,16 @@
 								);
 								position: relative;
 								z-index: 1;
+							}
+						}
+
+						&[aria-current='page'] {
+							&:hover,
+							&:focus,
+							&:active {
+								color: var(
+									--wp--custom--navigation-sublink--color
+								);
 							}
 						}
 					}
