Update for link styles for a11y

--- a/assets/scss/base/global.scss
+++ b/assets/scss/base/global.scss
@@ -31,15 +31,20 @@ sup {
 }
 
 a {
-	text-decoration: none;
+	text-decoration: underline;
+	text-decoration-thickness: 1px;
+	text-underline-offset: 0.15em;
 	color: var(--wp--preset--color--accent-1);
 
 	&:hover {
 		color: var(--wp--preset--color--accent-3);
+		text-decoration-thickness: 2px;
 	}
 
 	&:focus {
 		color: var(--wp--preset--color--accent-3);
+		outline: 2px solid var(--wp--preset--color--accent-3);
+		outline-offset: 2px;
 	}
 
 	&:visited {
@@ -48,6 +53,12 @@ a {
 		&:hover {
 			color: var(--wp--preset--color--accent-3);
 		}
+	}
+
+	.wp-block-button &,
+	.wp-block-navigation &,
+	button & {
+		text-decoration: none;
 	}
 }
 
