--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: Meet WDS BT, a stylish block theme, tailored for WordPress, featuri
 Requires at least: 6.4
 Tested up to: 6.7
 Requires PHP: 8.2
-Version: 1.4.0
+Version: 1.4.0-beta
 License: GNU General Public License v3
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Text Domain: wdsbt
