--- a/assets/scss/abstracts/mobile-only-mixins.scss
+++ b/assets/scss/abstracts/mobile-only-mixins.scss
@@ -1,12 +1,11 @@
 @use 'responsive-mixins';
 
-// Example usage:
+// Example usage.
 // .my-element {
 //   @include mobile-only;
 // }
 
-// Mixin for visually hiding elements for accessibility (a11y) with
-// mobile-only visibility
+// Mixin for visually hiding elements for accessibility (a11y) with mobile-only visibility.
 @mixin mobile-only {
 	border: 0;
 	clip: rect(0, 0, 0, 0);
