--- a/assets/scss/blocks/core/query.scss
+++ b/assets/scss/blocks/core/query.scss
@@ -1,6 +1,6 @@
 /* stylelint-disable selector-class-pattern, declaration-no-important */
 
-/* -- Query loop == */
+/* -- Query loop -- */
 
 .wp-block-query {
 	.wp-block-post-template {
