--- a/assets/scss/patterns/_index.scss
+++ b/assets/scss/patterns/_index.scss
@@ -1,2 +1,2 @@
 // 'patterns/' houses styles for custom patterns.
-// @import './pattern-name';
+// Import pattern file, e.g. @import './pattern-name'.
