Remove search input width

--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
 	</div>
 	<!-- /wp:spacer -->
 
-	<!-- wp:search {"label":"Search","showLabel":false,"width":75,"widthUnit":"%","buttonText":"Search","buttonPosition":"button-inside","buttonUseIcon":true,"align":"center"} /-->
+	<!-- wp:search {"label":"Search","showLabel":false,"buttonText":"Search","buttonPosition":"button-inside","buttonUseIcon":true,"align":"center"} /-->
 
 	<!-- wp:query-title {"type":"search"} /-->
 
